# sqlite-in-rust

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: cli.rs  commands.rs  handlers.rs  helpers.rs  main.rs  processing.rs
src/db/: table.rs
src/sql/: parser.rs
